tests/file_test/testdata/else_follows_not_if_or_lbrace.llang
if 3 > 4 {return 7; } else x
